Solved issue of reset filters being overlapped

--- a/app/styles/analyticsviewer.scss
+++ b/app/styles/analyticsviewer.scss
@@ -279,6 +279,13 @@
     text-align: left;
 }
 
+#filterSelectDrop>.w2ui-field{
+    margin-left: 50px!important;
+}
+
+#analyticsAddFilter{
+    margin-left: -40px!important;
+}
 
 .w2ui-field-helper input {
     padding-left: 10px!important;
